--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,12 +29,14 @@ jobs:
           at: .
       - run:
           name: Bygger Docker image
-          command: docker build -t "$DOCKER_IMAGE_VERSIONED" .
+          command: |
+            echo $DOCKER_IMAGE_NAME
+            docker build -t $DOCKER_IMAGE_NAME .
       - run:
           name: Pusher Docker image
           command: |
             echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
-            docker push "$DOCKER_IMAGE_VERSIONED"
+            docker push "$DOCKER_IMAGE_NAME"
       - run:
           name: Deployer til dev
           command: |
@@ -49,7 +51,7 @@ jobs:
                        "version": [1, 0, 0],
                        "team": "personbruker",
                        "kubernetes": {
-                         "resources": ['"$(cat nais-dev.json | jq '.spec.image = "'$DOCKER_IMAGE_VERSIONED'"')"']
+                         "resources": ['"$(cat nais-dev.json | jq '.spec.image = "'$DOCKER_IMAGE_NAME'"')"']
                        }
                      }
                    }' \
@@ -77,7 +79,7 @@ jobs:
                        "version": [1, 0, 0],
                        "team": "personbruker",
                        "kubernetes": {
-                         "resources": ['"$(cat nais-prod.json | jq '.spec.image = "'$DOCKER_IMAGE_VERSIONED'"')"']
+                         "resources": ['"$(cat nais-prod.json | jq '.spec.image = "'$DOCKER_IMAGE_NAME'"')"']
                        }
                      }
                    }' \
@@ -92,7 +94,11 @@ commands:
           name: Setter miljøvariabler
           command: |
             echo "export COMMIT_SHORT='$(git rev-parse --short HEAD)'" >> $BASH_ENV
-            echo "export DOCKER_IMAGE_VERSIONED='$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$CIRCLE_BUILD_NUM-${CIRCLE_BRANCH////-}'" >> $BASH_ENV
+            echo "export DOCKER_IMAGE_VERSION='$CIRCLE_WORKFLOW_ID-${CIRCLE_BRANCH////-}$CIRCLE_TAG'" >> $BASH_ENV
+      - run:
+          name: Definerer navn på docker-image
+          command: |
+            echo "export DOCKER_IMAGE_NAME='$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$DOCKER_IMAGE_VERSION'" >> $BASH_ENV
 
 workflows:
   bygg-og-deploy:
