--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,8 +32,8 @@ jobs:
           paths: ./*
   
   deploy-til-dev:
-    # docker:
-    #   - image: circleci/python:3.7.3
+    docker:
+      - image: circleci/node:10
     steps:
       - checkout
       - attach_workspace:
