--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,10 +42,10 @@ jobs:
           name: deploy til '$web'-container
           command: |
               cd folder_to_persist/build
-              find . -type f -exec curl -I -X DELETE -T {}  -H "x-ms-date: $(date -u)" -H "x-ms-blob-type: BlockBlob" "https://sapersonopplysninger.blob.core.windows.net/'$web'/{}$AZURE_STORAGE_SAS" \;
-              find . -type f -exec curl -I -X PUT -T {}  -H "x-ms-date: $(date -u)" -H "x-ms-blob-type: BlockBlob" "https://sapersonopplysninger.blob.core.windows.net/'$web'/{}$AZURE_STORAGE_SAS" \;
+              find . -type f -exec curl -I -X DELETE -T {}  -H "x-ms-date: $(date -u)" -H "x-ms-blob-type: BlockBlob" "https://sapersonopplysninger.blob.core.windows.net/$web/{}$AZURE_STORAGE_SAS" \;
+              find . -type f -exec curl -I -X PUT -T {}  -H "x-ms-date: $(date -u)" -H "x-ms-blob-type: BlockBlob" "https://sapersonopplysninger.blob.core.windows.net/$web/{}$AZURE_STORAGE_SAS" \;
               cd ..
-              curl -I -X PUT -T ./index.html  -H "x-ms-date: $(date -u)" -H "x-ms-blob-type: BlockBlob" "https://sapersonopplysninger.blob.core.windows.net/'$web'/index.html$AZURE_STORAGE_SAS"
+              curl -I -X PUT -T ./index.html  -H "x-ms-date: $(date -u)" -H "x-ms-blob-type: BlockBlob" "https://sapersonopplysninger.blob.core.windows.net/$web/index.html$AZURE_STORAGE_SAS"
               # az storage blob delete-batch -s '$web' --account-name sapersonopplysninger
               # az storage blob upload-batch -d '$web' --account-name sapersonopplysninger -s folder_to_persist/build/
               # az storage blob upload -c '$web' -f folder_to_persist/index.html -n index.html --account-name sapersonopplysninger
@@ -63,12 +63,12 @@ jobs:
       - attach_workspace:
           at: folder_to_persist/
       - run: 
-          name: deploy til '$web'-container
+          name: deploy til dev-container
           command: |
               cd folder_to_persist/build
-              find . -type f -exec curl -I -X PUT -T {}  -H "x-ms-date: $(date -u)" -H "x-ms-blob-type: BlockBlob" "https://sapersonopplysninger.blob.core.windows.net/sapersonopplysninger/{}$AZURE_STORAGE_SAS" \;
+              find . -type f -exec curl -I -X PUT -T {}  -H "x-ms-date: $(date -u)" -H "x-ms-blob-type: BlockBlob" "https://sapersonopplysninger.blob.core.windows.net/sc-personopplysninger/{}$AZURE_STORAGE_SAS" \;
               cd ..
-              curl -I -X PUT -T ./index.html  -H "x-ms-date: $(date -u)" -H "x-ms-blob-type: BlockBlob" "https://sapersonopplysninger.blob.core.windows.net/sapersonopplysninger/index.html$AZURE_STORAGE_SAS"
+              curl -I -X PUT -T ./index.html  -H "x-ms-date: $(date -u)" -H "x-ms-blob-type: BlockBlob" "https://sapersonopplysninger.blob.core.windows.net/sc-personopplysninger/index.html$AZURE_STORAGE_SAS"
 
   purge-cdn:
     docker:
