--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,8 @@ jobs:
           name: deploy til '$web'-container
           command: |
               cd folder_to_persist/build
-              find . -type f -exec sudo chmod +x ./putBlob.sh && ./putBlob.sh {} sapersonopplysninger \$web  \;
+              chmod +x ./putBlob.sh
+              find . -type f -exec ./putBlob.sh {} sapersonopplysninger \$web  \;
               cd ..
               #curl -I -X PUT -T ./index.html  -H "x-ms-date: $(date -u)" -H "x-ms-blob-type: BlockBlob" "https://sapersonopplysninger.blob.core.windows.net/\$web/index.html$AZURE_STORAGE_SAS"
 
