--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
           command: |
               chmod +x ./putBlob.sh
               cd folder_to_persist/build
-              find . -type f -exec ../../putBlob.sh {} sapersonopplysninger \$web  \;
+              find . -type f -exec ../../putBlob.sh {} sapersonopplysninger \$web $AZURE_STORAGE_SAS  \;
               cd ..
               #curl -I -X PUT -T ./index.html  -H "x-ms-date: $(date -u)" -H "x-ms-blob-type: BlockBlob" "https://sapersonopplysninger.blob.core.windows.net/\$web/index.html$AZURE_STORAGE_SAS"
 
