--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,11 +58,11 @@ jobs:
       - run: 
           name: deploy til dev-container
           command: |
+              chmod +x ./putBlob.sh
               cd folder_to_persist/build
-              find . -type f -exec curl -I -X PUT -T {}  -H "x-ms-date: $(date -u)" -H "x-ms-blob-type: BlockBlob" "https://sapersonopplysninger.blob.core.windows.net/sc-personopplysninger/{}$AZURE_STORAGE_SAS" \;
+              find . -type f -exec ../../putBlob.sh {} sapersonopplysninger sc-opplysninger $AZURE_STORAGE_SAS  \;
               cd ..
-              curl -I -X PUT -T ./index.html  -H "x-ms-date: $(date -u)" -H "x-ms-blob-type: BlockBlob" "https://sapersonopplysninger.blob.core.windows.net/sc-personopplysninger/index.html$AZURE_STORAGE_SAS"
-
+              ../putBlob.sh ./index.html sapersonopplysninger sc-opplysninger $AZURE_STORAGE_SAS
   purge-cdn:
     docker:
       - image: circleci/python:3.7.3
