--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-collapse": "^4.0.3",
     "react-dom": "^16.8.6",
     "react-intl": "^2.9.0",
+    "react-json-view": "^1.19.1",
     "react-modal": "^3.8.1",
     "react-moment": "^0.9.2",
     "react-motion": "^0.5.2",
