--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@babel/core": "^7.4.5",
     "@navikt/arbeidsforhold": "^1.0.95",
+    "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
     "core-js": "^2.5.7",
     "fetch-mock": "^7.3.3",
