--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
 
   deploy-til-dev:
     docker:
-      - image: circleci/node:11.7.0
+      - image: navikt/deployment-cli:latest
     steps:
       - checkout
       - sett-miljovariabler
@@ -30,34 +30,15 @@ jobs:
       - run:
           name: Bygger Docker image
           command: |
-            echo $DOCKER_IMAGE_NAME
-            docker build -t $DOCKER_IMAGE_NAME .
+            echo $IMAGE_NAME
+            docker build -t $IMAGE_NAME .
       - run:
           name: Pusher Docker image
           command: |
-            echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
-            docker push "$DOCKER_IMAGE_NAME"
-      - run:
-          name: Deployer til dev
-          command: |
-            curl -i \
-                -X POST \
-                -d '{
-                     "ref": "'"$COMMIT_SHORT"'",
-                     "description": "Automated deployment request for personopplysninger from team personbruker",
-                     "environment": "dev-sbs",
-                     "required_contexts": [],
-                     "payload": {
-                       "version": [1, 0, 0],
-                       "team": "personbruker",
-                       "kubernetes": {
-                         "resources": ['"$(cat nais-dev.json | jq '.spec.image = "'$DOCKER_IMAGE_NAME'"')"']
-                       }
-                     }
-                   }' \
-                -H "Accept: application/vnd.github.ant-man-preview+json" \
-                -u "$GH_USER":"$GH_TK" \
-                https://api.github.com/repos/navikt/personopplysninger/deployments
+            echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+            docker push $IMAGE_NAME
+      - deploy:
+          til: "dev"
 
   deploy-til-prod:
     docker:
@@ -65,40 +46,42 @@ jobs:
     steps:
       - checkout
       - sett-miljovariabler
-      - run:
-          name: Deployer til prod
-          command: |
-            curl -i \
-                -X POST \
-                -d '{
-                     "ref": "'"$COMMIT_SHORT"'",
-                     "description": "Automated deployment request for personopplysninger from team personbruker",
-                     "environment": "prod-sbs",
-                     "required_contexts": [],
-                     "payload": {
-                       "version": [1, 0, 0],
-                       "team": "personbruker",
-                       "kubernetes": {
-                         "resources": ['"$(cat nais-prod.json | jq '.spec.image = "'$DOCKER_IMAGE_NAME'"')"']
-                       }
-                     }
-                   }' \
-                -H "Accept: application/vnd.github.ant-man-preview+json" \
-                -u "$GH_USER":"$GH_TK" \
-                https://api.github.com/repos/navikt/personopplysninger/deployments
+      - deploy:
+          til: "prod"
 
 commands:
+  deploy:
+    parameters:
+      til:
+        type: string
+    steps:
+      - run:
+          name: Deployer til << parameters.til >>
+          command: |
+            echo $GH_DEPLOY_KEY | base64 -d | dos2unix > gh_deploy_key.pem
+            deployment-cli deploy create \
+                --cluster=<< parameters.til >>-sbs \
+                --team=personbruker \
+                --resource=nais-<< parameters.til >>.yaml \
+                --repository=$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME \
+                --var baseurl=/person/$CIRCLE_PROJECT_REPONAME \
+                --var project=$CIRCLE_PROJECT_REPONAME \
+                --var version=$IMAGE_VERSION \
+                --key=gh_deploy_key.pem \
+                --ref=$COMMIT_SHORT \
+                --appid=34043
+
   sett-miljovariabler:
     steps:
       - run:
           name: Setter miljøvariabler
           command: |
             echo "export COMMIT_SHORT='$(git rev-parse --short HEAD)'" >> $BASH_ENV
-            echo "export DOCKER_IMAGE_VERSION='$CIRCLE_WORKFLOW_ID-${CIRCLE_BRANCH////-}$CIRCLE_TAG'" >> $BASH_ENV
+            echo "export IMAGE_VERSION='$CIRCLE_WORKFLOW_ID-${CIRCLE_BRANCH////-}$CIRCLE_TAG'" >> $BASH_ENV
       - run:
           name: Definerer navn på docker-image
           command: |
-            echo "export DOCKER_IMAGE_NAME='$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$DOCKER_IMAGE_VERSION'" >> $BASH_ENV
+            echo "export IMAGE_NAME='$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$IMAGE_VERSION'" >> $BASH_ENV
 
 workflows:
   bygg-og-deploy:
