--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,9 +39,8 @@ jobs:
             docker push $IMAGE_NAME
       - deploy:
           til: dev-sbs
-          ingress1: https://$CIRCLE_PROJECT_REPONAME.nais.oera-q.local/person/$CIRCLE_PROJECT_REPONAME
-          ingress2: https://www-q0.nav.no/person/$CIRCLE_PROJECT_REPONAME
-
+          ingress1: https://$REPO_NAME.nais.oera-q.local/person/$REPO_NAME
+          ingress2: https://www-q0.nav.no/person/$REPO_NAME
 
   deploy-til-prod:
     docker:
@@ -51,8 +50,8 @@ jobs:
       - sett-miljovariabler
       - deploy:
           til: prod-sbs
-          ingress1: https://$CIRCLE_PROJECT_REPONAME.nais.oera.no/person/$CIRCLE_PROJECT_REPONAME
-          ingress2: https://www.nav.no/person/$CIRCLE_PROJECT_REPONAME
+          ingress1: https://$REPO_NAME.nais.oera.no/person/$REPO_NAME
+          ingress2: https://www.nav.no/person/$REPO_NAME
 
 commands:
   deploy:
@@ -72,11 +71,11 @@ commands:
                 --team=personbruker \
                 --resource=nais.config.yaml \
                 --cluster=<< parameters.til >> \
-                --repository=$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME \
-                --var baseurl=/person/$CIRCLE_PROJECT_REPONAME \
+                --repository=$CIRCLE_PROJECT_USERNAME/$REPO_NAME \
+                --var baseurl=/person/$REPO_NAME \
                 --var ingress1=<< parameters.ingress1 >> \
                 --var ingress2=<< parameters.ingress2 >> \
-                --var project=$CIRCLE_PROJECT_REPONAME \
+                --var reponame=$REPO_NAME \
                 --var version=$IMAGE_VERSION \
                 --key=gh_deploy_key.pem \
                 --ref=$COMMIT_SHORT \
@@ -85,14 +84,15 @@ commands:
   sett-miljovariabler:
     steps:
       - run:
-          name:  Definerer git-referanse og versjonsnummer
+          name:  Definerer git-referanse, versjonsnummer og navn
           command: |
             echo "export COMMIT_SHORT='$(git rev-parse --short HEAD)'" >> $BASH_ENV
             echo "export IMAGE_VERSION='$CIRCLE_WORKFLOW_ID-${CIRCLE_BRANCH////-}$CIRCLE_TAG'" >> $BASH_ENV
+            echo "export REPO_NAME='$CIRCLE_PROJECT_REPONAME'" >> $BASH_ENV
       - run:
           name: Definerer navn på docker-image
           command: |
-            echo "export IMAGE_NAME='$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$IMAGE_VERSION'" >> $BASH_ENV
+            echo "export IMAGE_NAME='$CIRCLE_PROJECT_USERNAME/$REPO_NAME:$IMAGE_VERSION'" >> $BASH_ENV
 
 workflows:
   bygg-og-deploy:
