Installer @navikt/arbeidsforhold i pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,10 @@ jobs:
           command: |
             npm ci
       - run:
+          name: Installer @navikt/arbeidsforhold
+          command: |
+            npm i @navikt/arbeidsforhold
+      - run:
           name: Bygg React app
           command: |
             npm run build
