--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/core": "^7.4.5",
     "@navikt/arbeidsforhold": "latest",
     "babel-polyfill": "^6.26.0",
+    "calidation": "^1.16.2",
     "classnames": "^2.2.6",
     "core-js": "^2.5.7",
     "fetch-mock": "^7.3.3",
@@ -86,6 +87,7 @@
     "typescript": "^3.5.1"
   },
   "devDependencies": {
+    "@types/calidation": "^1.16.0",
     "@types/fetch-mock": "^7.3.1",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.8",
