--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "nav-frontend-hjelpetekst-style": "^0.3.29",
     "nav-frontend-ikoner-assets": "^1.0.1",
     "nav-frontend-js-utils": "^1.0.7",
+    "nav-frontend-knapper": "^1.0.30",
+    "nav-frontend-knapper-style": "^0.3.26",
     "nav-frontend-lenkepanel": "^1.0.29",
     "nav-frontend-lenkepanel-style": "^0.3.25",
     "nav-frontend-lenker": "^1.0.27",
@@ -72,7 +74,7 @@
     "nav-frontend-veilederpanel-style": "0.0.17",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "react": "^16.9.0",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.8.6",
     "react-intl": "^2.9.0",
