--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-modal": "^3.8.1",
     "react-moment": "^0.9.2",
     "react-motion": "^0.5.2",
+    "react-phone-input-2": "^2.9.5",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-router-hash-link": "^1.2.1",
